src/components/ui/Button/Button.module.scss
@use "@/styles/tokens" as *;

:root {
  --button-bg: var(--color-white);
  --button-text: var(--color-black);
  --button-hover-bg: var(--color-brand);
}

:global(.dark) {
  --button-bg: var(--color-black);
  --button-text: var(--color-white);
  --button-hover-bg: var(--color-brand-dark);
}

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-weight: $font-weight-bold;
  padding: var(--spacing-sm) var(--spacing-md);
  border: none;
  border-radius: 0.375rem;
  cursor: pointer;
  transition:
    background-color 0.2s ease,
    color 0.2s ease;
  font-family: var(--font-roboto), sans-serif;
  font-size: var(--font-size-base);
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
}

/* Variants */
.primary {
  background-color: var(--color-brand);
  color: var(--color-white);

  &:hover {
    background-color: var(--color-brand-dark);
  }
}

.secondary {
  background-color: var(--button-bg);
  color: var(--button-text);
  border: 1px solid var(--color-gray);

  &:hover {
    background-color: var(--button-hover-bg);
    border: 1px solid var(--color-brand);
  }
}

/* Sizes */
.small {
  padding: var(--spacing-sm) var(--spacing-md);
  font-size: var(--font-size-sm);
}

.medium {
  padding: var(--spacing-sm) var(--spacing-lg);
  font-size: var(--font-size-base);
}

.large {
  padding: var(--spacing-sm) var(--spacing-xxl);
  font-size: var(--font-size-lg);

  @media screen and (max-width: $breakpoint-desktop) {
    padding: var(--spacing-sm) var(--spacing-xl);
    font-size: var(--font-size-base);
  }
}

.disabled {
  opacity: 0.6;
  pointer-events: none;
}

